# mdbook-frontmatter-strip

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  lib.rs.bak  main.rs  main.rs.bak
