[package]
name = "mdbook-frontmatter-strip"
version = "0.1.0"
edition = "2021"
description = "mdBook preprocessor that strips YAML frontmatter from chapters"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[[bin]]
name = "mdbook-frontmatter-strip"
path = "src/main.rs"
