[package]
name = "mdbook-frontmatter-strip"
version = "0.1.3"
edition = "2024"
description = "mdBook preprocessor that strips YAML frontmatter from chapters"
license = "Apache-2.0"
repository = "https://github.com/saylesss88/mdbook-frontmatter-strip"
readme = "README.md"
keywords = ["mdbook", "rss", "feed", "preprocessor", "blog"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
anyhow = "1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1"
serde_yaml = "0.9.34"

[[bin]]
name = "mdbook-frontmatter-strip"
path = "src/main.rs"
